Colaboratory を使用して作成しました

--- a/pythonclass01.ipynb
+++ b/pythonclass01.ipynb
@@ -6,7 +6,7 @@
       "name": "pythonclass01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMjcKvNV6GQ4cegnSDwuc3p",
+      "authorship_tag": "ABX9TyNoTkLxtW9hEIswnkl9lWeS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,11 +53,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "90dv5FimpCWY",
-        "outputId": "d2c65f3c-6024-4e66-d4e5-a287b94ddc4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
-        }
+        },
+        "outputId": "d2c65f3c-6024-4e66-d4e5-a287b94ddc4a"
       },
       "source": [
         "def scope_test():\n",
@@ -74,7 +74,7 @@
         "\n",
         "    spam = \"test spam\"\n",
         "    do_local()\n",
-        "    print(\"After local assignment:\", spam)\n",
+        "    print(\"After local assignment:\", spam) #\n",
         "    do_nonlocal()\n",
         "    print(\"After nonlocal assignment:\", spam)\n",
         "    do_global()\n",
@@ -103,7 +103,7 @@
         "id": "pcDKrzhPqfZ_"
       },
       "source": [
-        "普通、global な変数は local の外、global な場所で代入すると思うのだが、この例を見ると、scope_test() の中で global な変数に代入ができて、しかも、scope の中の変数を上書きしていない。 まあ、話はわかるが、あらためて下らない言語だと思う。 まあいいか。\n",
+        "普通、global な変数は local の外、global な場所で代入すると思うのだが、この例を見ると、scope_test() の中で global な変数に代入ができて、しかも、scope の中の変数を上書きしていない。 まあ、話はわかるが、これでいいのか? まあいいか。\n",
         "\n"
       ]
     },
@@ -147,11 +147,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "nftIQJwWsCeC",
-        "outputId": "7f2ca8ee-c727-4e5c-cd6b-8cb33e01d07c",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 84
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "51f0305c-094e-4fc6-c3b4-76ca6096997b"
       },
       "source": [
         "class MyClass:\n",
@@ -161,24 +160,33 @@
         "    def f(self):\n",
         "        return 'hello world'\n",
         "\n",
-        "print(MyClass.i)\n",
+        "print(MyClass.i) #=> 12345\n",
         "x = MyClass()\n",
-        "print(x)\n",
-        "print(x.f())\n",
-        "print(x.i)"
+        "print(x) #=> <__main__.MyClass object at 0x7fd942f5edd0>\n",
+        "print(x.f()) #=> hello world\n",
+        "print(x.i) #=> 12345"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "12345\n",
-            "<__main__.MyClass object at 0x7f9eeeba5c18>\n",
+            "<__main__.MyClass object at 0x7fd9409314d0>\n",
             "hello world\n",
             "12345\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g1dVYBjdJyis"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -208,11 +216,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "XeSEKyR2uaRb",
-        "outputId": "9856e731-cc0a-4445-e441-6cf74fc02fb2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "9856e731-cc0a-4445-e441-6cf74fc02fb2"
       },
       "source": [
         "class Complex:\n",
@@ -239,11 +247,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "UCg0PAoCurf3",
-        "outputId": "e982704f-d786-41b5-e176-82127d70cbea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        }
+        },
+        "outputId": "e982704f-d786-41b5-e176-82127d70cbea"
       },
       "source": [
         "# 実験\n",
@@ -278,11 +286,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "7CUVLRikBZV5",
-        "outputId": "29af4983-6250-47dd-b010-b3d95d9a356b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "29af4983-6250-47dd-b010-b3d95d9a356b"
       },
       "source": [
         "class MyClass:\n",
@@ -319,11 +327,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "6GE6XfFOjfF5",
-        "outputId": "bd4f81a4-e734-4c64-83e5-e0f1a9b53b29",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 134
-        }
+        },
+        "outputId": "bd4f81a4-e734-4c64-83e5-e0f1a9b53b29"
       },
       "source": [
         "class MyClass:\n",
@@ -373,11 +381,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "R_yqez5Mkifp",
-        "outputId": "0dbbaab5-ab28-4615-b8bb-60fa1cd26393",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 84
-        }
+        },
+        "outputId": "0dbbaab5-ab28-4615-b8bb-60fa1cd26393"
       },
       "source": [
         "class Dog:\n",
@@ -421,11 +429,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "f3YLwG7D8EXl",
-        "outputId": "1e70b860-49d5-4325-ffc7-b956c1191fc4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "1e70b860-49d5-4325-ffc7-b956c1191fc4"
       },
       "source": [
         "class Dog:\n",
@@ -473,11 +481,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "AeiYHMVI8zKg",
-        "outputId": "0f3579f3-ae12-4f60-de7d-f7b6d0d2fce4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "outputId": "0f3579f3-ae12-4f60-de7d-f7b6d0d2fce4"
       },
       "source": [
         "class Dog:\n",
@@ -531,11 +539,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "9a3v_eOmrvj4",
-        "outputId": "600791b5-b1b1-4700-c57b-38a4418f81ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        }
+        },
+        "outputId": "600791b5-b1b1-4700-c57b-38a4418f81ac"
       },
       "source": [
         "class Warehouse:\n",
@@ -574,11 +582,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "zb3T_tA2sVAD",
-        "outputId": "28eac8c8-6567-4eb0-fb2f-6299cdbdbde1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
-        }
+        },
+        "outputId": "28eac8c8-6567-4eb0-fb2f-6299cdbdbde1"
       },
       "source": [
         "# Function defined outside the class\n",
@@ -621,11 +629,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "hDAjhK5dsbyi",
-        "outputId": "0b094d8d-866a-45d0-c223-5e0b62e5b940",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "0b094d8d-866a-45d0-c223-5e0b62e5b940"
       },
       "source": [
         "class Bag:\n",
@@ -659,11 +667,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "9Q1kOPN2RKJP",
-        "outputId": "0b6ce703-c420-4785-e109-09afa202be28",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "outputId": "0b6ce703-c420-4785-e109-09afa202be28"
       },
       "source": [
         "# 実験\n",
@@ -837,10 +845,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "IJCaRFQGtqMQ",
-        "outputId": "f9a73bc3-9b5b-44fb-d2a5-0d5a1e541d80",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f9a73bc3-9b5b-44fb-d2a5-0d5a1e541d80"
       },
       "source": [
         "for element in [1, 2, 3]:\n",
@@ -889,10 +897,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "4dVnvfGsttQg",
-        "outputId": "8a726c40-692a-48ac-f677-807ce18f911f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8a726c40-692a-48ac-f677-807ce18f911f"
       },
       "source": [
         "s = 'abc'\n",
@@ -932,10 +940,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "YmuNcOoHt0Kl",
-        "outputId": "30e86586-18dd-4ed5-9bdc-4dc729107879",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "30e86586-18dd-4ed5-9bdc-4dc729107879"
       },
       "source": [
         "class Reverse:\n",
@@ -999,10 +1007,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "IPA2k908uHDJ",
-        "outputId": "29b4f7d9-ed96-43be-e2ce-1a82b4a22e1d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "29b4f7d9-ed96-43be-e2ce-1a82b4a22e1d"
       },
       "source": [
         "def reverse(data):\n",
@@ -1046,10 +1054,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "ubEgOJIM_2QL",
-        "outputId": "3e0aa73d-0657-43a8-9835-4104ed748966",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3e0aa73d-0657-43a8-9835-4104ed748966"
       },
       "source": [
         "# 実験\n",
@@ -1087,10 +1095,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "sMDMdCezBIgs",
-        "outputId": "acc86fd2-c5b7-4c37-bffe-59a16eea1c39",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "acc86fd2-c5b7-4c37-bffe-59a16eea1c39"
       },
       "source": [
         "# 実験\n",
@@ -1141,10 +1149,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "lU0nnclAAPzQ",
-        "outputId": "490c9831-7dea-4eec-a3b0-d44130be5d2f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "490c9831-7dea-4eec-a3b0-d44130be5d2f"
       },
       "source": [
         "# 実験\n",
@@ -1184,10 +1192,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Zhe5TEPMuPwX",
-        "outputId": "65f8aed9-c5b9-4920-8138-4eaa603b4dae",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "65f8aed9-c5b9-4920-8138-4eaa603b4dae"
       },
       "source": [
         "data = 'golf'\n",
