Colaboratory を使用して作成しました

--- a/pythonclass01.ipynb
+++ b/pythonclass01.ipynb
@@ -6,7 +6,7 @@
       "name": "pythonclass01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNoTkLxtW9hEIswnkl9lWeS",
+      "authorship_tag": "ABX9TyPOLUCLLzcg6wIrdadb3wVk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "id": "yrJddglkkd8c"
       },
       "source": [
-        "# クラス"
+        "# 変数のスコープ"
       ]
     },
     {
@@ -54,12 +54,12 @@
       "metadata": {
         "id": "90dv5FimpCWY",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 86
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d2c65f3c-6024-4e66-d4e5-a287b94ddc4a"
+        "outputId": "d7d6cafd-bf6a-4616-aace-730b6ccfcea5"
       },
       "source": [
+        "# 変数のスコープ\n",
         "def scope_test():\n",
         "    def do_local():\n",
         "        spam = \"local spam\"\n",
@@ -74,24 +74,63 @@
         "\n",
         "    spam = \"test spam\"\n",
         "    do_local()\n",
-        "    print(\"After local assignment:\", spam) #\n",
+        "    print(\"After local assignment:\", spam) #=> test spam\n",
         "    do_nonlocal()\n",
-        "    print(\"After nonlocal assignment:\", spam)\n",
+        "    print(\"After nonlocal assignment:\", spam) #=> nonlocal spam\n",
         "    do_global()\n",
-        "    print(\"After global assignment:\", spam)\n",
+        "    print(\"After global assignment:\", spam) #=> nonlocal spam\n",
         "\n",
         "scope_test()\n",
-        "print(\"In global scope:\", spam)"
+        "print(\"In global scope:\", spam) #=> global spam"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "After local assignment: test spam\n",
-            "After nonlocal assignment: nonlocal spam\n",
-            "After global assignment: nonlocal spam\n",
+            "After global assignment: test spam\n",
             "In global scope: global spam\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B58862nDRm2V",
+        "outputId": "3b584a26-607c-4113-9881-c89467c411b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 変数のスコープ\r\n",
+        "spam = \"global spam\"\r\n",
+        "def scope_test():\r\n",
+        "    def do_global():\r\n",
+        "        global spam\r\n",
+        "        print(\"in do_global:\", spam) #=> global spam\r\n",
+        "        spam = \"global spam 2\"\r\n",
+        "        print(\"in do_global:\", spam) #=> global spam\r\n",
+        "\r\n",
+        "    spam = \"test spam\"\r\n",
+        "    do_global()\r\n",
+        "    print(\"After global assignment:\", spam) #=> test spam\r\n",
+        "\r\n",
+        "scope_test()\r\n",
+        "print(\"In global scope:\", spam) #=> global spam"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "in do_global: global spam\n",
+            "in do_global: global spam 2\n",
+            "After global assignment: test spam\n",
+            "In global scope: global spam 2\n"
           ],
           "name": "stdout"
         }
@@ -100,11 +139,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pcDKrzhPqfZ_"
+        "id": "A6doIybOTIEz"
       },
       "source": [
-        "普通、global な変数は local の外、global な場所で代入すると思うのだが、この例を見ると、scope_test() の中で global な変数に代入ができて、しかも、scope の中の変数を上書きしていない。 まあ、話はわかるが、これでいいのか? まあいいか。\n",
-        "\n"
+        "# クラス"
       ]
     },
     {
@@ -166,7 +204,7 @@
         "print(x.f()) #=> hello world\n",
         "print(x.i) #=> 12345"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
