Colaboratory を使用して作成しました

--- a/linear_nagai.ipynb
+++ b/linear_nagai.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "linear_nagai.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM5iD43zlXuauenOHO7uZGc",
+      "authorship_tag": "ABX9TyMfEVR7EbzLBO92sfFmZk6x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,22 +42,35 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 39
+          "height": 111
         },
         "id": "YLK1mbz_OBnx",
-        "outputId": "09cbb015-57f7-443a-d734-9dcd005afc69"
+        "outputId": "34ef1640-f7e4-4872-c0d1-da5d8dade661"
       },
       "source": [
         "# ベクトルの基本演算\r\n",
         "%%latex\r\n",
-        "\\alpha = \\left()"
+        "a = \\begin{pmatrix}\r\n",
+        "    a_1 \\\\\r\n",
+        "    \\vdots \\\\\r\n",
+        "    a_n\r\n",
+        "\\end{pmatrix}, \\quad\r\n",
+        "b = \\begin{pmatrix}\r\n",
+        "    b_1 \\\\\r\n",
+        "    \\vdots \\\\\r\n",
+        "    b_n\r\n",
+        "\\end{pmatrix}\r\n",
+        "\\in \\mathrm{R}^n , \\quad p \\in \\mathrm{R} \\quad\r\n",
+        "に対して、\\\\\r\n",
+        "\\\\\r\n",
+        "和 \\quad a + b = \r\n"
       ],
-      "execution_count": 1,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\alpha =",
+            "text/latex": "a = \\begin{pmatrix}\n    a_1 \\\\\n    \\vdots \\\\\n    a_n\n\\end{pmatrix}, \\quad\nb = \\begin{pmatrix}\n    b_1 \\\\\n    \\vdots \\\\\n    b_n\n\\end{pmatrix}\n\\in \\mathrm{R}^n , \\quad p \\in \\mathrm{R} \\quad\nに対して、\\\\\n\\\\\n和 \\quad a + b = ",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -67,6 +80,17 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "luo9Rsf7PLAD"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
