--- a/linear_nagai.ipynb
+++ b/linear_nagai.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "linear_nagai.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMvbs9Z7nE1SddxP53VZHbS",
+      "authorship_tag": "ABX9TyO4A1o0EptlPV94TJVZLvQW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,7 +86,7 @@
         "    a_1 b_2 - a_2 b_1\r\n",
         "\\end{pmatrix}"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -113,6 +113,7 @@
         "outputId": "fcf14f10-c400-4886-f3d4-5c0086ad3250"
       },
       "source": [
+        "# ベクトルの基本演算\r\n",
         "from sympy import *\r\n",
         "a, a_1, a_2, a_3 = symbols ('a, a_1, a_2, a_3')\r\n",
         "a = Matrix([a_1, a_2, a_3])\r\n",
@@ -127,7 +128,7 @@
         "display(a.norm())\r\n",
         "display(a.cross(b))\r\n"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -234,23 +235,58 @@
       "cell_type": "code",
       "metadata": {
         "id": "_eJOOBJBuUHk",
-        "outputId": "6c39d709-a6c3-4a69-b891-cd5aa8cf0bd0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 39
-        }
+          "height": 111
+        },
+        "outputId": "987a9bca-5d82-4dba-e76c-e59c44b092e5"
       },
       "source": [
         "# 行列の基本演算\r\n",
         "%%latex\r\n",
-        "A = (a_{ij}),\\quad B= (b_{ij}) \\quad (1 \\leq i, )"
+        "\\displaystyle\r\n",
+        "A = (a_{ij}),\\quad B= (b_{ij}) \\quad (1 \\leq i, j \\leq n) \\ に対して、\\\\\r\n",
+        "\\\\\r\n",
+        "AB = (a_{ij})(b_{ij}) = (c_{ij}), c_ij=\r\n",
+        "\\sum_{k=1}^{n}a_{ik}b_{kj} \\\\\r\n",
+        "\\\\\r\n",
+        "転置行列 \\quad {}^t\\!A"
       ],
-      "execution_count": 33,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "A = (a_{ij}),\\quad B= (b_{ij}) \\quad (1 \\leq i, )",
+            "text/latex": "\\displaystyle\nA = (a_{ij}),\\quad B= (b_{ij}) \\quad (1 \\leq i, j \\leq n) \\ に対して、\\\\\n\\\\\nAB = (a_{ij})(b_{ij}) = (c_{ij}), c_ij=\n\\sum_{k=1}^{n}a_{ik}b_{kj} \\\\\n\\\\\n転置行列 \\quad {}^t\\!A",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "isRDxGf81uU9",
+        "outputId": "c116c33e-ebd1-410c-9019-ef40555cd737",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 67
+        }
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\\displaystyle\n\\sum\\limits_{n=1}^\\infty",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
