Colaboratory を使用して作成しました

--- a/linear_nagai.ipynb
+++ b/linear_nagai.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "linear_nagai.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO4A1o0EptlPV94TJVZLvQW",
+      "authorship_tag": "ABX9TyOJPL+Bh+F7O1g3G9nltfsd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -237,9 +237,9 @@
         "id": "_eJOOBJBuUHk",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 111
+          "height": 168
         },
-        "outputId": "987a9bca-5d82-4dba-e76c-e59c44b092e5"
+        "outputId": "f52ff42d-0557-4d72-e911-8d43fefd43d3"
       },
       "source": [
         "# 行列の基本演算\r\n",
@@ -247,17 +247,20 @@
         "\\displaystyle\r\n",
         "A = (a_{ij}),\\quad B= (b_{ij}) \\quad (1 \\leq i, j \\leq n) \\ に対して、\\\\\r\n",
         "\\\\\r\n",
-        "AB = (a_{ij})(b_{ij}) = (c_{ij}), c_ij=\r\n",
-        "\\sum_{k=1}^{n}a_{ik}b_{kj} \\\\\r\n",
+        "AB = (a_{ij})(b_{ij}) = (c_{ij}), \\quad c_ij=\\sum_{k=1}^{n}a_{ik}b_{kj} \\\\\r\n",
         "\\\\\r\n",
-        "転置行列 \\quad {}^t\\!A"
+        "転置行列 \\quad {}^t\\!A (a_{ij}) \\quad (行と列の入れ替え) \\\\\r\n",
+        "\\\\\r\n",
+        "A が対称 (反対称) 行列 \\quad \\overset{定義}{\\Longleftrightarrow} \\quad {}^t\\!A = A \\quad (-A)\\\\\r\n",
+        "\\\\\r\n",
+        "A が直交行列 \\quad \\overset{定義}{\\Longleftrightarrow} \\quad {}^t\\!AA = E\r\n"
       ],
-      "execution_count": 50,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\\displaystyle\nA = (a_{ij}),\\quad B= (b_{ij}) \\quad (1 \\leq i, j \\leq n) \\ に対して、\\\\\n\\\\\nAB = (a_{ij})(b_{ij}) = (c_{ij}), c_ij=\n\\sum_{k=1}^{n}a_{ik}b_{kj} \\\\\n\\\\\n転置行列 \\quad {}^t\\!A",
+            "text/latex": "\\displaystyle\nA = (a_{ij}),\\quad B= (b_{ij}) \\quad (1 \\leq i, j \\leq n) \\ に対して、\\\\\n\\\\\nAB = (a_{ij})(b_{ij}) = (c_{ij}), \\quad c_ij=\\sum_{k=1}^{n}a_{ik}b_{kj} \\\\\n\\\\\n転置行列 \\quad {}^t\\!A (a_{ij}) \\quad (行と列の入れ替え) \\\\\n\\\\\nA が対称 (反対称) 行列 \\quad \\overset{定義}{\\Longleftrightarrow} \\quad {}^t\\!A = A \\quad (-A)\\\\\n\\\\\nA が直交行列 \\quad \\overset{定義}{\\Longleftrightarrow} \\quad {}^t\\!AA = E",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -272,16 +275,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "isRDxGf81uU9",
-        "outputId": "c116c33e-ebd1-410c-9019-ef40555cd737",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
-        }
+        },
+        "outputId": "c116c33e-ebd1-410c-9019-ef40555cd737"
       },
       "source": [
-        ""
+        "# ベクトルの基本演算\r\n",
+        "from sympy import *"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -295,6 +299,15 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cTEAvoIg5dmy"
+      },
+      "source": [
+        "# いまここ"
       ]
     }
   ]
