--- a/linear_nagai.ipynb
+++ b/linear_nagai.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_nagai.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNraog7QSIVy/Hz+QDt8X9X",
+      "authorship_tag": "ABX9TyPbvWrPyhAr8mFAHhhxQPHZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -452,30 +452,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SbFSM1BOvns9",
-        "outputId": "c235032a-3c22-4937-eea9-1d73782414b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 79
-        }
+          "height": 141
+        },
+        "id": "SbFSM1BOvns9",
+        "outputId": "bc54a95f-8555-4df7-b706-47dcc8893062"
       },
       "source": [
         "# 2,3次行列式\r\n",
         "%%latex\r\n",
         "\\left|\r\n",
         "\\begin{array}{ccc}\r\n",
-        "    a_{11} & a_{12} & a_{13} \\\\\r\n",
-        "    a_{21} & a_{22} & a_{23} \\\\\r\n",
-        "    a_{31} & a_{32} & a_{33}\r\n",
+        "    a_1 & a_2 \\\\\r\n",
+        "    b_1 & b_2 \r\n",
         "\\end{array}\r\n",
-        "\\right|\r\n"
+        "\\right| = a_1 b_2 - a_2 b_1 \\\\\r\n",
+        "\\  \\\\\r\n",
+        "\\left|\r\n",
+        "\\begin{array}{ccc}\r\n",
+        "    a_1 & a_2 & a_3 \\\\\r\n",
+        "    b_1 & b_2 & b_3 \\\\\r\n",
+        "    c_1 & c_2 & c_3\r\n",
+        "\\end{array}\r\n",
+        "\\right| = a_1 b_2 c_3 + a_2 b_3 c_1 + a_3 b_1 c_2 - a_1 b_3 c_2 - a_2 b_1 c_3 - a_3 b_2 c_1\r\n"
       ],
-      "execution_count": 48,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "\n  \\mathrm{det}A = |A| = \\left|\n    \\begin{array}{ccc}\n      a_{11} & a_{12} & a_{13} \\\\\n      a_{21} & a_{22} & a_{23} \\\\\n      a_{31} & a_{32} & a_{33}\n    \\end{array}\n  \\right|",
+            "text/latex": "\\left|\n\\begin{array}{ccc}\n    a_1 & a_2 \\\\\n    b_1 & b_2 \n\\end{array}\n\\right| = a_1 b_2 - a_2 b_1 \\\\\n\\  \\\\\n\\left|\n\\begin{array}{ccc}\n    a_1 & a_2 & a_3 \\\\\n    b_1 & b_2 & b_3 \\\\\n    c_1 & c_2 & c_3\n\\end{array}\n\\right| = a_1 b_2 c_3 + a_2 b_3 c_1 + a_3 b_1 c_2 - a_1 b_3 c_2 - a_2 b_1 c_3 - a_3 b_2 c_1",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
@@ -485,6 +492,18 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4Qz8FKPi96ag"
+      },
+      "source": [
+        "# 2,3次行列式\r\n",
+        "from sympy import *\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
