Colaboratory を使用して作成しました

--- a/linear_nagai.ipynb
+++ b/linear_nagai.ipynb
@@ -6,7 +6,7 @@
       "name": "linear_nagai.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN1PHADgDQmQzWYUpDKBu4N",
+      "authorship_tag": "ABX9TyOJmX2qXvE7D+2N/DNYqkBs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,6 +36,15 @@
         "理工系の数理 線形代数 永井敏隆 永井敦 裳華房\r\n",
         "\r\n",
         "を読む。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bHXjNKMQROYs"
+      },
+      "source": [
+        "# ベクトルの基本演算"
       ]
     },
     {
@@ -544,6 +553,30 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AcrQtIyXRUUa"
+      },
+      "source": [
+        "# 余因子展開 (4次行列式、1行目での余因子展開)\r\n",
+        "%%latex\r\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4Zb0D_28RlCb"
+      },
+      "source": [
+        "# 余因子展開 (4次行列式、1行目での余因子展開)\r\n",
+        "from sympy import *"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
