Colaboratory を使用して作成しました

--- a/haskell_matrix.ipynb
+++ b/haskell_matrix.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "haskell_matrix.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNhfABiclJz5uvzxuTkGUQ1",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOP4ILtq/PqwbH2FNWwhBDs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +32,16 @@
       },
       "source": [
         "# メモ\r\n",
+        "\r\n",
+        "Haskell で 行列 matrix を学ぶ。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M2RJBQ37g8iG"
+      },
+      "source": [
         "\r\n",
         "行列 haskell  \r\n",
         "で検索\r\n",
@@ -66,13 +77,192 @@
         "id": "WecUWnw6kQjM"
       },
       "source": [
+        "# colab の環境に haskell と hmatrix を入れる\r\n",
         "%%capture\r\n",
         "!apt install haskell-platform\r\n",
-        "!cabal update\r\n",
-        "!cabal install hmatrix"
+        "# !cabal install hmatrix\r\n"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DG8yTdi3ma9V",
+        "outputId": "3f105bf4-09f0-4890-8786-63252225be1b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!sudo cabal install hmatrix"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Resolving dependencies...\n",
+            "All the requested packages are already installed:\n",
+            "hmatrix-0.20.1\n",
+            "Use --reinstall if you want to reinstall anyway.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yNJLx9LIil1V"
+      },
+      "source": [
+        "!apt install libghc6-hunit-dev libghc6-quickcheck-dev\r\n",
+        "!apt install libgsl0-dev libblas-dev liblapack-dev libatlas-base-dev"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Lq-jql6Wjij6"
+      },
+      "source": [
+        "!wget http://hackage.haskell.org/packages/archive/storable-complex/0.2/storable-complex-0.2.tar.gz"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5I7cV7mAkMlH",
+        "outputId": "a9713242-fad2-4daa-c7d3-2402f7980e59",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!tar -xzf storable-complex-0.2.tar.gz\r\n",
+        "# !cd storable-complex-0.2\r\n",
+        "# !runhaskell Setup configure\r\n",
+        "# !sudo runhaskell Setup install"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "<no location info>: error: module ‘Setup’ is a package module\n",
+            "\n",
+            "<no location info>: error: module ‘Setup’ is a package module\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y-mpnVrRlo8n",
+        "outputId": "94b139c0-6fa9-461c-9b24-26fe0683d7d9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!cd storable-complex-0.2/; runhaskell Setup configure; cabal install"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Configuring storable-complex-0.2...\n",
+            "Resolving dependencies...\n",
+            "Configuring storable-complex-0.2...\n",
+            "Building storable-complex-0.2...\n",
+            "Failed to install storable-complex-0.2\n",
+            "Build log ( /root/.cabal/logs/storable-complex-0.2.log ):\n",
+            "cabal: Entering directory '.'\n",
+            "Configuring storable-complex-0.2...\n",
+            "Building storable-complex-0.2...\n",
+            "Preprocessing library storable-complex-0.2...\n",
+            "[1 of 1] Compiling Foreign.Storable.Complex ( Foreign/Storable/Complex.hs, dist/build/Foreign/Storable/Complex.o )\n",
+            "\n",
+            "Foreign/Storable/Complex.hs:26:10: error:\n",
+            "    Duplicate instance declarations:\n",
+            "      instance (RealFloat a, Storable a) => Storable (Complex a)\n",
+            "        -- Defined at Foreign/Storable/Complex.hs:26:10\n",
+            "      instance Storable a => Storable (Complex a)\n",
+            "        -- Defined in ‘Data.Complex’\n",
+            "cabal: Leaving directory '.'\n",
+            "cabal: Error: some packages failed to install:\n",
+            "storable-complex-0.2 failed during the building phase. The exception was:\n",
+            "ExitFailure 1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fi8mokzJkbhx",
+        "outputId": "2c8f91ad-1368-44a4-b7b5-b6e8ac051789",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# !cd storable-complex-0.2/; runhaskell Setup configure; ls -la"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Configuring storable-complex-0.2...\n",
+            "total 28\n",
+            "drwxr-xr-x 4 root root 4096 Mar  7 21:23 .\n",
+            "drwxr-xr-x 1 root root 4096 Mar  7 21:21 ..\n",
+            "drwxr-xr-x 3 root root 4096 Mar  7 21:25 dist\n",
+            "drwxr-xr-x 3 root root 4096 Nov 19  2008 Foreign\n",
+            "-rw-r--r-- 1 root root 1512 Nov 19  2008 LICENSE\n",
+            "-rw-r--r-- 1 root root   76 Nov 19  2008 Setup.lhs\n",
+            "-rw-r--r-- 1 root root  687 Nov 19  2008 storable-complex.cabal\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HeBfYLIviEfF",
+        "outputId": "fa751112-6c3f-4944-9c31-2b9f70525d9a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# !cabal install hmatrix"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Resolving dependencies...\n",
+            "Configuring hmatrix-0.20.1...\n",
+            "Building hmatrix-0.20.1...\n",
+            "Installed hmatrix-0.20.1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -95,7 +285,7 @@
       "source": [
         "!ghc -e $'import Numeric.LinearAlgebra'"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
