--- a/haskell_matrix.ipynb
+++ b/haskell_matrix.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_matrix.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOP4ILtq/PqwbH2FNWwhBDs",
+      "authorship_tag": "ABX9TyPXju3EIgEto3OXBYwrG8aF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,200 +79,19 @@
       "source": [
         "# colab の環境に haskell と hmatrix を入れる\r\n",
         "%%capture\r\n",
-        "!apt install haskell-platform\r\n",
-        "# !cabal install hmatrix\r\n"
+        "!apt install haskell-platform"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DG8yTdi3ma9V",
-        "outputId": "3f105bf4-09f0-4890-8786-63252225be1b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "DG8yTdi3ma9V"
       },
       "source": [
+        "# colab の環境に haskell と hmatrix を入れる\r\n",
         "!sudo cabal install hmatrix"
-      ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Resolving dependencies...\n",
-            "All the requested packages are already installed:\n",
-            "hmatrix-0.20.1\n",
-            "Use --reinstall if you want to reinstall anyway.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yNJLx9LIil1V"
-      },
-      "source": [
-        "!apt install libghc6-hunit-dev libghc6-quickcheck-dev\r\n",
-        "!apt install libgsl0-dev libblas-dev liblapack-dev libatlas-base-dev"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Lq-jql6Wjij6"
-      },
-      "source": [
-        "!wget http://hackage.haskell.org/packages/archive/storable-complex/0.2/storable-complex-0.2.tar.gz"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5I7cV7mAkMlH",
-        "outputId": "a9713242-fad2-4daa-c7d3-2402f7980e59",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "!tar -xzf storable-complex-0.2.tar.gz\r\n",
-        "# !cd storable-complex-0.2\r\n",
-        "# !runhaskell Setup configure\r\n",
-        "# !sudo runhaskell Setup install"
-      ],
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "<no location info>: error: module ‘Setup’ is a package module\n",
-            "\n",
-            "<no location info>: error: module ‘Setup’ is a package module\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "y-mpnVrRlo8n",
-        "outputId": "94b139c0-6fa9-461c-9b24-26fe0683d7d9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "!cd storable-complex-0.2/; runhaskell Setup configure; cabal install"
-      ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Configuring storable-complex-0.2...\n",
-            "Resolving dependencies...\n",
-            "Configuring storable-complex-0.2...\n",
-            "Building storable-complex-0.2...\n",
-            "Failed to install storable-complex-0.2\n",
-            "Build log ( /root/.cabal/logs/storable-complex-0.2.log ):\n",
-            "cabal: Entering directory '.'\n",
-            "Configuring storable-complex-0.2...\n",
-            "Building storable-complex-0.2...\n",
-            "Preprocessing library storable-complex-0.2...\n",
-            "[1 of 1] Compiling Foreign.Storable.Complex ( Foreign/Storable/Complex.hs, dist/build/Foreign/Storable/Complex.o )\n",
-            "\n",
-            "Foreign/Storable/Complex.hs:26:10: error:\n",
-            "    Duplicate instance declarations:\n",
-            "      instance (RealFloat a, Storable a) => Storable (Complex a)\n",
-            "        -- Defined at Foreign/Storable/Complex.hs:26:10\n",
-            "      instance Storable a => Storable (Complex a)\n",
-            "        -- Defined in ‘Data.Complex’\n",
-            "cabal: Leaving directory '.'\n",
-            "cabal: Error: some packages failed to install:\n",
-            "storable-complex-0.2 failed during the building phase. The exception was:\n",
-            "ExitFailure 1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "fi8mokzJkbhx",
-        "outputId": "2c8f91ad-1368-44a4-b7b5-b6e8ac051789",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "# !cd storable-complex-0.2/; runhaskell Setup configure; ls -la"
-      ],
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Configuring storable-complex-0.2...\n",
-            "total 28\n",
-            "drwxr-xr-x 4 root root 4096 Mar  7 21:23 .\n",
-            "drwxr-xr-x 1 root root 4096 Mar  7 21:21 ..\n",
-            "drwxr-xr-x 3 root root 4096 Mar  7 21:25 dist\n",
-            "drwxr-xr-x 3 root root 4096 Nov 19  2008 Foreign\n",
-            "-rw-r--r-- 1 root root 1512 Nov 19  2008 LICENSE\n",
-            "-rw-r--r-- 1 root root   76 Nov 19  2008 Setup.lhs\n",
-            "-rw-r--r-- 1 root root  687 Nov 19  2008 storable-complex.cabal\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HeBfYLIviEfF",
-        "outputId": "fa751112-6c3f-4944-9c31-2b9f70525d9a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "# !cabal install hmatrix"
-      ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Resolving dependencies...\n",
-            "Configuring hmatrix-0.20.1...\n",
-            "Building hmatrix-0.20.1...\n",
-            "Installed hmatrix-0.20.1\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "1EiwqjZMVQZa"
-      },
-      "source": [
-        "# colab の環境では上のコマンドでオッケーだが\r\n",
-        "# 私のローカルの環境ではHaskellライブラリの他に BLAS/LAPCKというものが必要だった\r\n",
-        "# sudo apt-get install libgsl0-dev libblas-dev liblapack-dev libatlas-base-dev"
       ],
       "execution_count": null,
       "outputs": []
@@ -283,25 +102,54 @@
         "id": "iyFnLL26pFJ6"
       },
       "source": [
+        "# 次のコードでエラーが出なければ hmatrix がインストールされている\r\n",
         "!ghc -e $'import Numeric.LinearAlgebra'"
       ],
-      "execution_count": 23,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-5mCxHuwVudn"
+        "id": "WCPKsbo_v6-0"
       },
       "source": [
-        "# 上のコードでエラーが出なければ hmatrix がインストールされている\r\n",
+        "# cabal でインストールできなかった場合、手動で入れることを試みる\r\n",
         "# haskell の線形代数パッケージ hmatrix は Fortran 時代から有名な\r\n",
         "# BLAS (Basic Linear Algebra Subprograms)\r\n",
         "# LAPACK — Linear Algebra PACKage\r\n",
-        "# を使っている"
+        "# を使っている\r\n",
+        "\r\n",
+        "# !apt install libghc6-hunit-dev libghc6-quickcheck-dev\r\n",
+        "# !apt install libgsl0-dev libblas-dev liblapack-dev libatlas-base-dev"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yNJLx9LIil1V"
+      },
+      "source": [
+        "# storable-complex は apt で入れようとするとパッケージがない、と言われる\r\n",
+        "\r\n",
+        "# !wget http://hackage.haskell.org/packages/archive/storable-complex/0.2/storable-complex-0.2.tar.gz\r\n",
+        "\r\n",
+        "# !tar -xzf storable-complex-0.2.tar.gz\r\n",
+        "# !cd storable-complex-0.2/; runhaskell Setup configure; cabal install"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y_aMcVuTwvZf"
+      },
+      "source": [
+        "# いまここ"
+      ]
     },
     {
       "cell_type": "code",
@@ -320,8 +168,7 @@
         "%%writefile vector01.hs\r\n",
         "import Numeric.LinearAlgebra\r\n",
         "main = do\r\n",
-        "    print (vector [1,2,3] * vector [3,0,-2])\r\n",
-        "  \r\n"
+        "    print (vector [1,2,3] * vector [3,0,-2])"
       ],
       "execution_count": null,
       "outputs": [
